# poismf

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  configure  configure.ac  pgd.c  pyproject.toml  requirements.txt  setup.py
R/: RcppExports.R  poismf.R
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst
example/: example_poismf_lastfm.ipynb
inst/: COPYRIGHTS
man/: calc.all.counts.Rd  evaluate.poisson.llk.Rd  factors.Rd  factors.single.Rd  get.all.predictions.Rd  get.factor.matrices.Rd  get.model.mappings.Rd  poismf.Rd  poismf_unsafe.Rd  poisson.llk.Rd  predict.poismf.Rd  predict_all.Rd  print.poismf.Rd  summary.poismf.Rd  topN.Rd  topN.new.Rd
poismf/: __init__.py  cfuns_double.pyx  cfuns_float.pyx  pgd.c  pmf.pyx  poismf_c_wrapper.pxi  poismf_c_wrapper.pyx
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  nonnegcg.c  pgd.c  poismf-win.def  poismf.c  poismf.h  pred.c  rwrapper.c  rwrapper.cpp  tnc.c  tnc.h  topN.c
