AC_INIT([poismf], 0.2.6)

AC_CHECK_LIB(atomic, __atomic_exchange, [HAS_ATOMIC=TRUE], [HAS_ATOMIC=FALSE])
if test "$HAS_ATOMIC" = "TRUE"; then
	OMP_PLUS_ATOMIC_L="\$(SHLIB_OPENMP_CFLAGS) -latomic"
	OMP_PLUS_ATOMIC="\$(SHLIB_OPENMP_CFLAGS)"
else
	OMP_PLUS_ATOMIC_L=""
	OMP_PLUS_ATOMIC=""
fi
AC_SUBST(OMP_PLUS_ATOMIC_L)
AC_SUBST(OMP_PLUS_ATOMIC)
AC_CONFIG_FILES([src/Makevars])
AC_OUTPUT
